<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/top_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/topTextView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:textSize="32sp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="413dp"
            android:layout_height="379dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/linearLayout2" app:layout_constraintVertical_bias="0.35000002"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight=".3">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:layout_weight="1" android:paddingRight="4dp"
                        android:paddingBottom="4dp" android:background="#000000">

                    <Button
                        android:id="@+id/button00"
                        style="@style/board_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/button00"
                        android:textSize="60sp"
                        app:backgroundTint="#3F51B5" />
                </FrameLayout>
                <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:layout_weight="1" android:paddingLeft="4dp"
                        android:paddingRight="4dp" android:paddingBottom="4dp" android:background="#000000">

                    <Button
                            android:text="@string/button01"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" android:id="@+id/button01"
                            style="@style/board_button"/>
                </FrameLayout>
                <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:layout_weight="1" android:paddingLeft="4dp"
                        android:paddingBottom="4dp" android:background="#000000">

                    <Button
                            android:text="@string/button02"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" android:id="@+id/button02"
                            style="@style/board_button"/>
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight=".3">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:layout_weight="1" android:paddingTop="4dp"
                        android:paddingRight="4dp" android:paddingBottom="4dp" android:background="#000000">

                    <Button
                            android:text="@string/button10"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" android:id="@+id/button10"
                            style="@style/board_button"/>
                </FrameLayout>
                <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:layout_weight="1" android:padding="4dp"
                        android:background="#000000">

                    <Button
                            android:text="@string/button11"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" android:id="@+id/button11"
                            style="@style/board_button"/>
                </FrameLayout>
                <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:layout_weight="1" android:paddingTop="4dp"
                        android:paddingLeft="4dp" android:paddingBottom="4dp" android:background="#000000">

                    <Button
                            android:text="@string/button12"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" android:id="@+id/button12"
                            style="@style/board_button"/>
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight=".3">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:layout_weight="1" android:paddingTop="4dp"
                        android:paddingRight="4dp" android:background="#000000">

                    <Button
                            android:text="@string/button20"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" android:id="@+id/button20"
                            style="@style/board_button"/>
                </FrameLayout>
                <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:layout_weight="1" android:paddingLeft="4dp"
                        android:paddingRight="4dp" android:paddingTop="4dp" android:background="#000000">

                    <Button
                            android:text="@string/button21"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" android:id="@+id/button21"
                            style="@style/board_button"/>
                </FrameLayout>
                <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:layout_weight="1" android:paddingLeft="4dp"
                        android:paddingTop="4dp" android:background="#000000">

                    <Button
                            android:text="@string/button22"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" android:id="@+id/button22"
                            style="@style/board_button"/>
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_button"
        android:textSize="32sp"
        app:backgroundTint="#3F51B5"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
</androidx.constraintlayout.widget.ConstraintLayout>